--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,9 +58,17 @@ ul {
   @apply list-disc list-inside pl-4;
 }
 
+.link-button {
+  @apply font-medium border-2 border-[var(--third)] px-2 py-1 hover:bg-[var(--third)] hover:text-white transition-colors duration-200;
+}
+
+.image-shadow {
+  @apply shadow-[4px_4px_0px_var(--third)];
+}
+
 /* Prose styling for blog content */
 .prose {
-  color: #374151;
+  color: #000000ff;
   line-height: 1.75;
 }
 
@@ -77,7 +85,7 @@ ul {
 }
 
 .prose p {
-  @apply mb-4 text-lg leading-relaxed;
+  @apply text-lg leading-relaxed;
 }
 
 .prose ul,
@@ -86,15 +94,15 @@ ul {
 }
 
 .prose li {
-  @apply mb-2;
+  @apply text-lg mb-2;
 }
 
 .prose a {
-  @apply text-blue-600 hover:underline;
+  @apply text-[var(--third)] font-bold hover:underline;
 }
 
 .prose img {
-  @apply rounded-lg shadow-sm my-6 mx-auto;
+  @apply h-96 shadow-[4px_4px_0px_var(--third)] my-6 mx-auto;
 }
 
 .prose blockquote {
